--- a/action/package.json
+++ b/action/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,12 @@
   },
   "homepage": "https://github.com/upkarlidder/openwhisk-hello-world#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "mqtt": "^4.2.6",
+    "node-cron": "^3.0.0",
     "pino": "^6.11.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
