adding docker-compose artifacts

--- a/action/package.json
+++ b/action/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server.js"
+    "development": "nodemon server.js"
   },
   "repository": {
     "type": "git",
