--- a/action/.env.sample
+++ b/action/.env.sample
@@ -1,6 +1,5 @@
-IOT_HOST=
-IOT_PROTOCOL=
-IOT_USERNAME=
-IOT_SECURE_PORT=
-IOT_PASSWORD=
-IOT_CLIENTID=
+IOT_HOST=orgid.messaging.internetofthings.ibmcloud.com
+IOT_PROTOCOL=mqtts
+IOT_USERNAME=use-token-auth
+IOT_SECURE_PORT=8883
+IOT_PEM=messaging.pem
