--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,16 @@ devices.*
 Thumbs.db
 .env-*
 .env.*
+.env
+!.env.docker
+
+
 *.zip
 *.pem
 dist
 dist-old
 history*.txt
 notes/
-env.json
-.env
 .vscode
 *secret*
 
