Changed IoT configuration to use VerneMQ instead of IoT Platform; fixed small bug on client connect that was putting out a false error message
Signed-off-by: Charlie Evans <charlie.glenn.evans.jr@gmail.com>

--- a/action/.env.docker
+++ b/action/.env.docker
@@ -1,5 +1,3 @@
-IOT_HOST=orgid.messaging.internetofthings.ibmcloud.com
-IOT_PROTOCOL=mqtts
-IOT_USERNAME=use-token-auth
-IOT_SECURE_PORT=8883
-IOT_PEM=messaging.pem
+IOT_HOST=pyrrha-mqttserver
+IOT_PROTOCOL=mqtt
+IOT_SECURE_PORT=1883
