build - fix npm err with /.npm, use node:16-alpine and development env in Dockerfile
Signed-off-by: Mateo Encarnacion <mateo.j.encarnacion@gmail.com>

--- a/action/Dockerfile.dev
+++ b/action/Dockerfile.dev
@@ -1,4 +1,3 @@
-#FROM docker.io/node:12-alpine
 FROM node:16-alpine
 
 WORKDIR /user-app
@@ -9,6 +8,8 @@ RUN npm ci
 
 COPY --chown=1001:0 . .
 RUN chmod -R g=u .
+RUN mkdir /.npm
+RUN chown -R 1001:0 /.npm
 
 ARG ENV=production
 ENV NODE_ENV $ENV
