--- a/action/package.json
+++ b/action/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openwhisk-hello-world",
+  "name": "pyrrha-sensor-simulator",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -26,7 +26,6 @@
     "node-cron": "^3.0.0",
     "pino": "^6.11.1",
     "nodemon": "^2.0.12"
-    "pino": "^6.11.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
