--- a/action/package.json
+++ b/action/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pyrrha-sensor-simulator",
+  "name": "pyrrha-device-simulator",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
