--- a/action/package.json
+++ b/action/package.json
@@ -11,23 +11,22 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/upkarlidder/openwhisk-hello-world.git"
+    "url": "git+https://github.com/Pyrrha-Platform/Pyrrha-Device-Simulator.git"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/upkarlidder/openwhisk-hello-world/issues"
+    "url": "https://github.com/Pyrrha-Platform/Pyrrha-Device-Simulator/issues"
   },
-  "homepage": "https://github.com/upkarlidder/openwhisk-hello-world#readme",
+  "homepage": "https://github.com/Pyrrha-Platform/Pyrrha-Device-Simulator#readme",
   "dependencies": {
     "dotenv": "^10.0.0",
     "mqtt": "^4.3.7",
     "node-cron": "^3.0.0",
-    "pino": "^6.11.1",
-    "nodemon": "^2.0.12"
+    "pino": "^9.14.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^3.1.10"
   }
 }
